--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+</head>
+<body>
+  <input id="photosearch" type="photo" placeholder="Type Search">
+  <button id="search">Search</button>
+</body>
+</html>
